--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Noel John's Retro Page</title>
   <style>
     body {
@@ -12,100 +12,73 @@
       margin: 0;
       padding: 0;
       line-height: 1.6;
-      text-align: center;
     }
     header {
       background-color: #ff00ff;
       color: #fff;
-      padding: 20px;
+      text-align: center;
+      padding: 25px;
       font-size: 2em;
       letter-spacing: 2px;
       text-shadow: 2px 2px #000;
+      cursor: pointer;
     }
-    main {
-      max-width: 900px;
+    section {
+      max-width: 800px;
       margin: 20px auto;
-      padding: 0 16px 60px;
-    }
-    section.card {
-      background: #000;
+      padding: 20px;
+      background-color: #000;
       border: 3px solid #00ffcc;
       border-radius: 10px;
-      box-shadow: 0 0 18px #ff00ff;
-      padding: 18px;
-      margin-bottom: 22px;
+      box-shadow: 0 0 20px #ff00ff;
     }
     h2 {
       color: #ffcc00;
-      margin-top: 0;
       text-shadow: 1px 1px #000;
     }
-    p, li {
-      color: #c0ffee;
-      text-align: left;
-    }
-    ul {
-      margin-left: 30px;
-    }
-    img.retro-img {
+    img {
       max-width: 100%;
       height: auto;
       display: block;
-      margin: 12px auto;
-      border: 3px solid #ff00ff;
-      border-radius: 8px;
-      box-shadow: 0 0 12px rgba(255,0,255,0.4);
+      margin: 10px 0;
+      border: 2px solid #ff00ff;
+      transition: transform 0.2s;
+    }
+    img:hover {
+      transform: scale(1.05);
+    }
+    iframe {
+      width: 100%;
+      height: 400px;
+      border: 2px solid #ff00ff;
+    }
+    #lebron {
+      display: none;
+      text-align: center;
+      font-size: 1.5em;
+      color: #ffcc00;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
 
-<header>Noel John</header>
+<header id="header"> Noel John </header>
 
-<main>
-  <section class="card">
-    <h2>My Goals After High School</h2>
-    <p>After high school, I want to study <strong>engineering</strong>. I’m interested in learning how computers and digital systems work, including concepts like:</p>
-    <ul>
-      <li><strong>Bit:</strong> A binary digit (0 or 1).</li>
-      <li><strong>Byte:</strong> A group of 8 bits.</li>
-      <li><strong>Roundoff:</strong> Error when numbers can’t be exactly represented.</li>
-      <li><strong>Analog data:</strong> Smooth, continuous values (e.g. sound waves).</li>
-      <li><strong>Lossless:</strong> Compression that preserves all original data.</li>
-      <li><strong>Lossy:</strong> Compression that discards some data permanently.</li>
-      <li><strong>Metadata:</strong> “Data about data” (file info, author, date, etc.).</li>
-    </ul>
-  </section>
+<section>
+  <h2>My Goals After High School</h2>
+  <p>After high school, I want to study engineering. I’m interested in learning how computers and digital systems work, including concepts like:</p>
+  <ul>
+    <li><strong>Bit:</strong> A binary digit, either 0 or 1.</li>
+    <li><strong>Byte:</strong> A sequence of 8 bits.</li>
+    <li><strong>Roundoff:</strong> Error that occurs when numbers can’t be represented precisely with limited bits.</li>
+    <li><strong>Analog data:</strong> Values that change smoothly over time, like pitch and volume in music.</li>
+    <li><strong>Lossless:</strong> Data compression that allows full recovery of the original.</li>
+    <li><strong>Lossy:</strong> Data compression that discards some data, so it can’t be fully recovered.</li>
+    <li><strong>Metadata:</strong> Data about data, like info about a file or database row.</li>
+  </ul>
+</section>
 
-  <section class="card">
-    <h2>Unit 1: Bits & Bytes</h2>
-    <p>Bits are the smallest unit of digital information, and bytes (8 bits) form the building blocks of all digital files.</p>
-    <img class="retro-img"
-         src="https://cdn.pixabay.com/photo/2015/04/23/00/41/binary-736885_1280.png"
-         alt="Bits & Bytes - Binary numbers">
-  </section>
-
-  <section class="card">
-    <h2>Unit 2: Data Compression</h2>
-    <p>Compression reduces file size so data is easier to store and transfer. There are two main types: <em>lossless</em> and <em>lossy</em>.</p>
-    <img class="retro-img"
-         src="https://cdn.pixabay.com/photo/2017/01/31/13/14/icon-2027661_1280.png"
-         alt="Data Compression - Zip file icon">
-  </section>
-
-  <section class="card">
-    <h2>Cloud Computing</h2>
-    <p>
-      Cloud computing uses remote servers to store, manage, and process data instead of relying on your local machine. 
-      It makes collaboration easier because multiple people can work on the same files in real time. 
-      Cloud platforms also scale resources up or down automatically depending on how much power or storage is needed. 
-      This means you can access powerful tools without having to buy expensive hardware.
-    </p>
-    <img class="retro-img"
-         src="https://cdn.pixabay.com/photo/2019/07/14/07/57/cloud-4332482_1280.png"
-         alt="Cloud Computing Illustration">
-  </section>
-</main>
-
-</body>
-</html>
+<section>
+  <h2>Unit 1 Topic: Bits & Bytes</h2>
+  <p>Bits are the smallest unit of digital information, and bytes (8 b
